<resources>
    <string name="app_name">Hala motor</string>
    <string name="facebook_app_id">648618505975230</string>
    <string name="fb_login_protocol_scheme">fb648618505975230</string>
    <string name="tab_home">Home</string>
    <string name="tab_message">Messages</string>
    <string name="tab_adv">Add Post</string>
    <string name="tab_notifications_">Notices</string>
    <string name="tab_profile">Profile</string>
    <string name="search">Search on Hala motor</string>
    <string name="just_search">Search</string>
    <string name="search_depends">Search depends on \:</string>
    <string name="insert">Insert an Ad</string>
    <string name="car_for_sale">Car for sale</string>
    <string name="exchange_car">Exchange car</string>
    <string name="car_for_rent">Car for rent</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="car_plates">Car plates</string>
    <string name="accessories">Accessories</string>
    <string name="wheels_rim">Wheels rim</string>
    <string name="wheels_rim_size">Wheels rim size</string>
    <string name="trucks">Trucks</string>
    <string name="junk_car">Junk car</string>
    <string name="suggested_to_you">Suggested to you</string>
    <string name="next">Next</string>
    <string name="reset">Reset</string>
    <string name="call">Call</string>
    <string name="upload_video">Add video</string>
    <string name="upload_photo">Add photo</string>
    <string name="what_do">What do you want to do \?</string>
    <string name="complete_car_details">Complete car details</string>
    <string name="upload_ad">Save and insert the add</string>
    <string name="process_now">You well do </string>
    <string name="see_all">See all</string>
    <string name="finish_ur_insurance_in_mint">Finish your insurance mintes</string>
    <string name="welcome_in_hala_motor">Welcome in Hala Motor</string>
    <string name="search_on_neighborhood">Search your neighborhood</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="see_more">See more</string>
    <string name="seen">Seen</string>
    <string name="week">Week</string>
    <string name="car_plates_city">Plates city</string>
    <string name="car_plates_number">Plates number</string>
    <string name="days">Days</string>
    <string name="day">Day</string>
    <string name="hour">Hours</string>
    <string name="min">Minutes</string>
    <string name="just_now">Just now</string>
    <string name="online">Online</string>
    <string name="tab_browsing">Browsing</string>
    <string name="see_less">See less</string>
    <string name="burned_price_1">Your price burned price\?</string>
    <string name="special_car_p_1">Your plates is special\?</string>
    <string name="message_burned_price">When make this feature on this well help you to bay your product faster then if you use it well product well not be live to few minutes to be sure this price is really burned price if not well can not use this feature again</string>
    <string name="message_burned_car_plates">When make this feature on this well help you to bay your product faster then if you use it well product well not be live to few minutes to be sure this \"Car Plates\" is really \"Special\" if not well can not use this feature again as well as can use it one inOrOut free</string>
    <string name="message_no_internet">Please connect to internet</string>
    <string name="select_category">Select category please</string>
    <string name="message_fill_car_plates">Please fill car plates number</string>
    <string name="message_fill_title_and_price">Please fill title and price</string>
    <string name="message_fill_des_and_price">Please fill description and price</string>
    <string name="fill_title_and_description_and_price">Please fill title \, description and price</string>
    <string name="fill_title_and_description">Please fill title and description</string>
    <string name="fill_title">Please fill car title</string>
    <string name="fill_description">Please fill car description</string>
    <string name="description">Description</string>
    <string name="no_options">No options</string>
    <string name="no_favorite">No items</string>
    <string name="general_tips">General tips</string>
    <string name="general_tips1">\. Only meet in public places</string>
    <string name="general_tips2">\. Never pay or transfer money in advance</string>
    <string name="general_tips3">\. Inspect the product before you buy it</string>
    <string name="fill_price">Please fill price</string>
    <string name="fill_real_title">real title</string>
    <string name="fill_real_phone_number">active number</string>
    <string name="fill_real_des">real description</string>
    <string name="fill_real_price">real price</string>
    <string name="fill">Fill</string>
    <string name="please">please</string>
    <string name="select_address">Please select address</string>
    <string name="upgrade_ur_account">Your used limited Ads please contact us</string>
    <string name="complete_product_details">Complete product details</string>
    <string name="blocked">Ur blocked to add new Ads please contact us</string>
    <string name="blocked_bp">Ur blocked to add item Burned Price contact us</string>
    <string name="posts">Posts</string>
    <string name="followers">Follower</string>
    <string name="write_ur_comment">Write your comment</string>
    <string name="comment">Comments</string>
    <string name="similar">Similar Ads</string>
    <string name="follow">Follow</string>
    <string name="we_cant">Can not help without permission</string>
    <string name="u_cant">Sorry max follower 500</string>
    <string name="unfollow">Unfollow</string>
    <string name="following">Following</string>
    <string name="special">\"Special\"</string>
    <string name="ur_product">Your product </string>
    <string name="welcome_notifications">Welcome to Hala Motor </string>
    <string name="live">live now</string>
    <string name="post_free_ads">Post free Ads</string>
    <string name="recent_viewed_ads">Recent Viewed Ads</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="favourite_ads">Favourite Ads</string>
    <string name="favourite">Favourite</string>
    <string name="calls_ads">Calls Ads</string>
    <string name="my_ad">My Ad</string>
    <string name="my_wallet">My Wallet</string>
    <string name="invite_your_friends">Invite your Friends</string>
    <string name="share_my_profile">Share my profile</string>
    <string name="help">help</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="arrangement">Arrangement</string>
    <string name="contact_us">Contact us</string>
    <string name="abou_the_app">Abou the app</string>
    <string name="settings">Settings</string>
    <string name="verified">Verified</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="build_trust">Build Trust</string>
    <string name="category">Category</string>
    <string name="car_make">Car make</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="condition">Condition</string>
    <string name="login_with_social_media">Login</string>
    <string name="must_login">Must to login before add item</string>
    <string name="kushuk">Kushuk</string>
    <string name="metal">Metal</string>
    <string name="kushuk_s">Kushuk</string>
    <string name="metal_s">Metal</string>
    <string name="dubai">Dubai</string>
    <string name="abu_dhabi">Abu Dhabi</string>
    <string name="sharjah">Sharjah</string>
    <string name="al_ain">Al Ain</string>
    <string name="ajman">Ajman</string>
    <string name="ras_al_khaimah">Ras Al Khaimah</string>
    <string name="um_al_quwain">Um Al Quwain</string>
    <string name="fujairah">Fujairah</string>
    <string name="dubai_s">Dubai</string>
    <string name="abu_dhabi_s">Abu Dhabi</string>
    <string name="sharjah_s">Sharjah</string>
    <string name="al_ain_s">Al Ain</string>
    <string name="ajman_s">Ajman</string>
    <string name="ras_al_khaimah_s">Ras Al Khaimah</string>
    <string name="um_al_quwain_s">Um Al Quwain</string>
    <string name="fujairah_s">Fujairah</string>
    <string name="dubai_acacia">Acacia Avenues</string>
    <string name="dubai_academic">Academic City</string>
    <string name="dubai_alaweer">Al Aweer</string>
    <string name="dubai_albadaa">Al Badaa</string>
    <string name="dubai_albarari">Al Barari</string>
    <string name="dubai_albarsha">Al Barsha</string>
    <string name="dubai_al_furjan">Al Furjan</string>
    <string name="dubai_al_garhoud">Al Garhoud</string>
    <string name="dubai_al_hamriya">Al Hamriya</string>
    <string name="dubai_al_jaddaf">Al Jaddaf</string>
    <string name="dubai_al_jafiliya">Al Jafiliya</string>
    <string name="dubai_al_khawaneej">Al Khawaneej</string>
    <string name="dubai_al_mizhar">Al Mizhar</string>
    <string name="dubai_al_muhaisnah">Al Muhaisnah</string>
    <string name="dubai_al_nahda">Al Nahda</string>
    <string name="dubai_al_quoz">Al Quoz</string>
    <string name="dubai_al_qusais">Al Qusais</string>
    <string name="dubai_al_rashidiya">Al Rashidiya</string>
    <string name="dubai_al_safa">Al Safa</string>
    <string name="dubai_al_sufouh">Al Sufouh</string>
    <string name="dubai_al_satwa">Al Satwa</string>
    <string name="dubai_al_shindagah">Al Shindagah</string>
    <string name="dubai_al_twar">Al Twar</string>
    <string name="dubai_al_warqaa">Al Warqa\'a</string>
    <string name="dubai_al_warsan">Al Warsan</string>
    <string name="dubai_al_wasl">Al Wasl</string>
    <string name="dubai_arabian_ranches">Arabian Ranches</string>
    <string name="dubai_bur_dubai">Bur Dubai</string>
    <string name="dubai_business_bay">Business Bay</string>
    <string name="dubai_culture_village">Culture Village</string>
    <string name="dubai_deira">Deira</string>
    <string name="dubai_difc">DIFC</string>
    <string name="dubai_discovery_gardens">Discovery Gardens</string>
    <string name="dubai_downtown_dubai">Dubai Downtown Dubai</string>
    <string name="dubai_downtown_jebel_ali">Dubai Downtown Jebel Ali</string>
    <string name="dubai_design_district">Dubai Design District</string>
    <string name="dubai_festival_city">Dubai Festival City</string>
    <string name="dubai_healthcare_city">Dubai Healthcare City</string>
    <string name="dubai_hills_estate">Hills Estate</string>
    <string name="dubai_industrial_city">Industrial City</string>
    <string name="dubai_international_city">International City</string>
    <string name="dubai_investment_park">Investment Park</string>
    <string name="dubai_land">Dubai Land</string>
    <string name="dubai_marina">Dubai Marina</string>
    <string name="dubai_media_city">Media City</string>
    <string name="dubai_pearl">Dubai Pearl</string>
    <string name="dubai_promenade">Dubai Promenade</string>
    <string name="dubai_silicon_oasis">Dubai Silicon Oasis</string>
    <string name="dubai_sports_city">Dubai Sports City</string>
    <string name="dubai_studio_city">Dubai Studio City</string>
    <string name="dubai_waterfront">Dubai Waterfront</string>
    <string name="dubai_world_central">Dubai World Central</string>
    <string name="dubai_du_biotech">DuBiotech</string>
    <string name="dubai_emirates_golf_club">Emirates Golf Club</string>
    <string name="dubai_emirates_hills">Emirates Hills</string>
    <string name="dubai_global_village">Global Village</string>
    <string name="dubai_green_community">Green Community</string>
    <string name="dubai_greens">Greens</string>
    <string name="price">Price</string>
    <string name="price_contry">AED</string>
    <string name="ad_product_title">Ad Title \(eg\: Range Rover\)</string>
    <string name="ad_product_description">Ad Description \(Add more details\)</string>
</resources>