<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/titleDescriptions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.FragmentTitleDescriptionPrice">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="90">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                app:hintTextAppearance="@style/HintText">

                                <android.support.design.widget.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="2dp"
                                    android:background="@null"
                                    android:hint="@string/ad_product_title"
                                    android:padding="5dp"
                                    android:id="@+id/fragment_title_description_title_Edt"
                                    android:textSize="15dp" />

                            </android.support.design.widget.TextInputLayout>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="10">

                            <ImageView
                                android:layout_width="14dp"
                                android:layout_height="14dp"
                                android:id="@+id/fragment_title_description_title_IV"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:visibility="gone"
                                android:background="@drawable/ic_cansel_edit_text" />

                        </RelativeLayout>

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorBlack2" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="90">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="130dp"
                                android:padding="2dp"
                                android:inputType="textMultiLine"
                                app:hintTextAppearance="@style/HintText">

                                <android.support.design.widget.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="2dp"
                                    android:background="@null"
                                    android:hint="@string/ad_product_description"
                                    android:padding="5dp"
                                    android:textSize="15dp"
                                    android:id="@+id/fragment_title_description_description_Edt"
                                    />

                            </android.support.design.widget.TextInputLayout>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="10">

                            <ImageView
                                android:layout_width="14dp"
                                android:layout_height="14dp"
                                android:id="@+id/fragment_title_description_description_IV"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:visibility="gone"
                                android:background="@drawable/ic_cansel_edit_text" />

                        </RelativeLayout>

                    </LinearLayout>

                </RelativeLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="12dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fragment_title_description_price_RL"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="82">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="4dp" />

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                app:hintTextAppearance="@style/HintText">

                                <android.support.design.widget.TextInputEditText
                                    android:layout_width="340dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="2dp"
                                    android:background="@null"
                                    android:hint="@string/price"
                                    android:inputType="number"
                                    android:padding="5dp"
                                    android:textSize="15dp"
                                    android:id="@+id/fragment_title_description_price_Edt"
                                    />

                            </android.support.design.widget.TextInputLayout>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:background="@color/colorSilver">


                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="18">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="8dp"
                                android:layout_marginLeft="1dp"
                                android:id="@+id/fragment_title_description_price_category_TV"
                                android:text="@string/price_contry"
                                android:textSize="18dp" />


                        </RelativeLayout>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="12dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:visibility="gone"
                    android:text="@string/message_burned_price"
                    android:id="@+id/fragment_title_description_message_TV"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="6dp"
                    />



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="17dp"
                                android:id="@+id/fragment_title_description_q_TV"
                                android:layout_marginLeft="1dp"
                                android:layout_marginStart="8dp"
                                android:textColor="@color/colorBlack"
                                android:text="@string/burned_price_1"
                                />

                            <android.support.v7.widget.SwitchCompat
                                android:layout_width="wrap_content"
                                android:layout_height="45dp"
                                android:layout_marginLeft="1dp"
                                android:layout_marginStart="16dp"
                                android:textOff="OFF"
                                android:textOn="ON"
                                app:switchTextAppearance="@style/BrandedSwitch.text"
                                app:theme="@style/BrandedSwitch.control"
                                android:id="@+id/fragment_title_description_switch_TV"
                                />

                        </LinearLayout>

                    </RelativeLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="8dp"/>
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="4dp" />

    </LinearLayout>


</RelativeLayout>

